# Embedded-and-AI-Projects-

./: 1kW_Microinverter_PCB_V2.00000.dip  1kW_Microinverter_SCH_V2.00000.dch  Capacitive and Inductive Meta Detector  ESP8266  Electric Fence Project  Optical Character Recognition  Optical FIber based Gas leakage Detection Test Code  Smart Electricity Meter  Smartch Switch for Electricity Node1  Smartch Switch for Electricity Node2  Smartch Switch for Electricity Node3  Smartch Switch for Electricity Node4  Transmitter and Reciever LoRa Module
AI based Video Survillence /: read me
cbx30/: .blanalyzer.json  .cproject  .gitignore  .gitlab-ci.yml  .project  CHANGELOG.md  CMakeLists.txt  README.md  Read ME  STM32L476QGIx_FLASH.ld  adc.c  adc.h  ble.c  ble.h  ble_service.h  bloader_dfu.h  bsp.c  bsp.h  burnto.c  button.c  button.h  buzzer.c  buzzer.h  circular_buffer.h  crossboxFSMAuto.hpp  crossbox_fsm.hpp  dbg_uart.h  dma.c  dma.h  emmc_helper.h  files_list.txt  fsm_helper.h  gps.c  gps.h  heart-rate.md  helpers.h  hrm.h  i2c.c  i2c.h  imu.c  (+13 more)
